trunk/Archive2/85/fa6d67fc1fd2e9/output
main.cpp:20:6: error: template-id 'foo<>' for 'void MyObj<3>::foo(r_ptr<int>) const' does not match any template declaration
 void MyObj<3>::foo(r_ptr<int> ptr) const{
      ^
main.cpp:20:36: note: saw 1 'template<>', need 2 for specializing a member function template
 void MyObj<3>::foo(r_ptr<int> ptr) const{
                                    ^
